# ranyou

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  README.md  bun.lockb  justfile  package-lock.json  package.json
client/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: App.tsx  AppContext.tsx  app.tsx  const.css  main.css  main.scss  main.ts  main.tsx  routeTree.gen.ts  vite-env.d.ts
client/src/components/ui/: checkbox-card.tsx
client/src/lib/: autocomplete.ts  common.ts  db.ts  fior.ts  lint.ts  pql.ts  random.ts  youtube.ts
client/src/lib/pql/: pql-highlight.ts  pql-parser.terms.ts  pql-parser.ts  pql.grammar
client/src/page/: fior-context.tsx  fior.tsx  menu.css  menu.module.scss  menu.tsx  not-found.tsx  play-context.tsx  play.css  play.module.scss  play.tsx
client/src/page/fior/: column.tsx  context.tsx  fior.tsx  raw.tsx  row.tsx  simple.tsx
client/src/page/fior/column/: context.tsx
client/src/pages/: menu.ts  play.module.scss  play.ts
client/src/routes/: __root.tsx  fior.lazy.tsx  index.lazy.tsx
client/src/routes/play/: index.lazy.tsx  index.tsx
client/src/routes/play/$playlistId/: index.lazy.tsx  index.tsx
client/src/routes/play/$playlistId/$id/: index.lazy.tsx  index.tsx
crates/ranyou-api/: Cargo.toml
crates/ranyou-api/src/: lib.rs
notes/: pql.cbnf  pql.md
server/: Cargo.toml  package.json  tsconfig.json
server/core/: Cargo.toml  build.rs
server/core/src/: database.rs  errors.rs  lib.rs  main.rs  model.rs  util.rs  youtube.rs
server/shuttle/: Cargo.toml
server/shuttle/src/: main.rs  turso.rs
server/sql/: createPlaylistRecordsTable.sql  insertPlaylistItems.sql  insertPlaylistRecord.sql  selectPlaylistItems.sql
server/sql/item/: create.sql
server/sql/record/: create.sql  insert.sql  select.sql  update.sql
server/src/: database.ts  errors.rs  index.ts  main.rs  youtube.ts
shared/: bun.lockb  package.json  tsconfig.json
shared/src/: index.ts
