[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["4lineclear"]
license = "MIT"

# | `authors`      | `categories`    |
# | `description`  | `documentation` |
# | `edition`      | `exclude`       |
# | `homepage`     | `include`       |
# | `keywords`     | `license`       |
# | `license-file` | `publish`       |
# | `readme`       | `repository`    |
# | `rust-version` | `version`       |
