[package]
name = "ranyou-api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.50"
lambda_http = "0.13"
lambda_runtime = "0.13"
aws-sdk-lambda = "1.51"

chrono = "0.4"
google-youtube3 = "6.0"
rustls = "0.23"
thiserror = "1.0"
serde = "1.0"
tokio = { version = "1.41", features = ["macros"] }

[build-dependencies]
dotenvy = "0.15"
# tower-http = { version = "0.6", features = ["cors"] }
