[package]
name = "ranyou-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
# axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6", features = ["serde"] }
derive_more = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["rc"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
# tower-http = { version = "0.6", features = ["decompression-full"] }
tracing = "0.1"
# tracing-subscriber = "0.3"

# database
bb8-postgres = { version = "0.8", features = ["with-chrono-0_4"] }

# workspace
tower-http = { workspace = true }
