[package]
name = "ranyou"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
ranyou-core = { path = "../core" }

shuttle-axum = { version = "0.48" }
shuttle-runtime = { version = "0.48" }

async-trait = "0.1"
dunce = "1.0"
serde = { version = "1.0", features = ["derive"] }
shuttle-service = { version = "0.48" }
url = { version = "2.5", features = ["serde"] }

# shared
libsql = { workspace = true }
