[package]
name = "ranyou"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
ranyou-core = { path = "../core" }

shuttle-axum = { version = "0.48" }
shuttle-runtime = { version = "0.48" }
shuttle-service = { version = "0.48" }
shuttle-shared-db = { version = "0.48", features = ["postgres"] }

async-trait = "0.1"
dunce = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }

tower-http = { workspace = true }
